@@ -2,11 +2,12 @@ package Package::Constants;
 
 use if $] >= 5.019006, 'deprecate';
 
+use 5.006;
 use strict;
-use vars qw[$VERSION $DEBUG];
+use warnings;
 
-$VERSION    = '0.04';
-$DEBUG      = 0;
+our $VERSION    = '0.04';
+our $DEBUG      = 0;
 
 =head1 NAME
 
